--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,18 @@
             <version>1.18.4</version>
         </dependency>
         
+        <!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+        -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+
 
 
         
